--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "landingpage",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "vite-starter",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "lite-server"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "devDependencies": {
+    "vite": "^5.4.2"
+  },
   "dependencies": {
-    "lite-server": "^2.6.1"
+    "@supabase/supabase-js": "^2.39.3"
   }
 }
